--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>TITULO</title>
+        <title>TITULOs</title>
     </head>
     <body>
         <h1>BEM VINDO</h1>
