--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
         <title>TITULOs</title>
     </head>
     <body>
-        <h1>BEM VINDO</h1>
+        <center><b><h1>BEM VINDO</h1></b></center>
+        <h2>AO PROGRAMA</h2>
     </body>
 </html>
