feat: Ajuste na tela

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <body>
 
         <center><i><b><h1>BEM VINDO</h1></b></i></center>
-        <h2>AO PROGRAMA</h2>
+        <h2>AO PROGRAdddMA</h2>
         <h3>QUALQUER COISA</h3>
 
     </body>
